Added Taylor's Frozen Flow paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -662,6 +662,20 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	lccn = {60015763},
 }
 
+@article{Taylor-1938-RoySocLon,
+	issn = {0080-4630},
+	journal = {Proceedings of the Royal Society of London. Series A, Mathematical and Physical Sciences (1934-1990)},
+	pages = {476--490},
+	volume = {164},
+	publisher = {The Royal Society},
+	number = {919},
+	year = {1938},
+	title = {The Spectrum of Turbulence},
+	author = {Taylor, G. I.},
+	keywords = {Physical sciences -- Physics -- Mechanics ; Physical sciences -- Chemistry -- Analytical chemistry ; Physical sciences -- Astronomy -- Astrophysics ; Mathematics -- Pure mathematics -- Geometry ; Arts -- Performing arts -- Music ; Business -- Industry -- Industrial sectors ; Mathematics -- Mathematical expressions -- Mathematical functions ; Applied sciences -- Laboratory techniques -- Spectroscopy ; Physical sciences -- Physics -- Mechanics ; Physical sciences -- Physics -- Mechanics;},
+}
+
+
 @book{Tyson-2012-SPIE,
 	author={Robert K. Tyson and Benjamin W. Frazier},
 	year={2012},
