added second dennis paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 27 Feb 2019
+% 28 Feb 2019
 %
 
 
@@ -114,7 +114,7 @@
   year={2015}
 }
 
-@article{Dennis-2011-JFM,
+@article{Dennis-2011-JFM_part1,
 	author={David J. C. Dennis and Timothy B. Nickels},
 	year={2011},
 	title={Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 1. Vortex packets},
@@ -124,14 +124,27 @@
 	url={http://dx.doi.org.proxy.library.nd.edu/10.1017/S0022112010006324}
 }
 
+@article{Dennis-2011-JFM_part2,
+	issn = {0022-1120},
+	abstract = {Three-dimensional (3D) measurements of a turbulent boundary layer have been made using high-speed particle image velocimetry (PIV) coupled with Taylor's hypothesis, with the objective of characterising the very long streamwise structures that have been observed previously. The measurements show the 3D character of both low- and high-speed structures over very long volumes. The statistics of these structures are considered, as is their relationship to the important turbulence quantities. In particular, the length of the structures and their wall-normal extent have been considered and their relationship to the other components of the velocity fluctuations and the instantaneous stress.},
+	journal = {Journal of Fluid Mechanics},
+	pages = {218--244},
+	volume = {673},
+	publisher = {Cambridge University Press},
+	year = {2011},
+	title = {Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 2. Long structures},
+	author = {DENNIS, DAVID J. C and NICKELS, TIMOTHY B},
+	keywords = {Boundary Layers; Boundary Layer Structure; Turbulent Boundary Layers},
+}
+
 @article{ElectronicsForYou-2016-Athena,
-issn = {0013-516X},
-journal = {Electronics For You},
-publisher = {Athena Information Solutions Pvt. Ltd.},
-year = {2016},
-title = {Defence Electronics - Part 8 of 8: Directed Energy Weapons: More on High-Energy Laser Weapons},
-language = {eng},
-keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Military Aspects ; Military Electronics Industry ; Military Aspects ; Military Electronics Industry ; Buildings and Facilities},
+	issn = {0013-516X},
+	journal = {Electronics For You},
+	publisher = {Athena Information Solutions Pvt. Ltd.},
+	year = {2016},
+	title = {Defence Electronics - Part 8 of 8: Directed Energy Weapons: More on High-Energy Laser Weapons},
+	language = {eng},
+	keywords = {Military Lasers ; Military Aspects ; Directed-Energy Weapons ; Military Aspects ; Military Electronics Industry ; Military Aspects ; Military Electronics Industry ; Buildings and Facilities},
 }
 
 @article{Fitzgerald-2002-AIAA,
