added squire BL paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -652,6 +652,18 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	url={http://www.osapublishing.org/abstract.cfm?URI=josa-70-8-998}
 }
 
+@article{Squire-2017-JFM,
+	issn = {0022-1120},
+	abstract = {The spatial structure of smooth- and rough-wall boundary layers is examined spectrally at approximately matched friction Reynolds number ( $\unicode[STIX]{x1D6FF}^{+}\approx 12\,000$ ). For each wall condition, temporal and true spatial descriptions of the same flow are available from hot-wire anemometry and high-spatial-range particle image velocimetry, respectively. The results show that over the resolved flow domain, which is limited to a streamwise length of twice the boundary layer thickness, true spatial spectra of smooth-wall streamwise and wall-normal velocity fluctuations agree, to within experimental uncertainty, with those obtained from time series using Taylorâs frozen turbulence hypothesis ( Proc. R. Soc. Lond. A, vol. 164, 1938, pp. 476â490). The same applies for the streamwise velocity spectra on rough walls. For the wall-normal velocity spectra, however, clear differences are observed between the true spatial and temporally convected spectra. For the rough-wall spectra, a correction is derived to enable accurate prediction of wall-normal velocity length scales from measurements of their time scales, and the implications of this correction are considered. Potential violations to Taylorâs hypothesis in flows above perturbed walls may help to explain conflicting conclusions in the literature regarding the effect of near-wall modifications on outer-region flow. In this regard, all true spatial and corrected spectra presented here indicate structural similarity in the outer region of smooth- and rough-wall flows, providing evidence for Townsendâs wall-similarity hypothesis ( The Structure of Turbulent Shear Flow , vol. 1, 1956).},
+	pages = {398--417},
+	volume = {812},
+	publisher = {Cambridge University Press},
+	year = {2017},
+	title = {Applicability of Taylorâs hypothesis in rough- and smooth-wall boundary layers},
+	author = {Squire, D. T and Hutchins, N and Morrill-Winter, C and Schultz, M. P and Klewicki, J. C and Marusic, I},
+	keywords = {Papers; Boundary Layer Structure; Turbulent Flows},
+}
+
 @article{Sutton-1969-AIAA,
 	author={G. W. Sutton},
 	year={1969},
