Added De Lucca Dissertation

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -70,6 +70,12 @@
 	title={Optical Aberrations Caused by Coherent Structures in a Subsonic, Compressible, Turbulent Boundary Layer}
 }
 
+@misc{DeLucca-2016-Dissertation,
+	author={Nicholas Giovanni De Lucca},
+	year={2016},
+	title={Studies of the Pressure Field and Related Beam Jitter for Hemisphere-on-Cylinder Turrets}
+}
+
 @inproceedings{DeLucca-2012-Nashville,
 	author={Nicholas De Lucca and Stanislav Gordeyev and Eric Jumper},
 	year={2012},
