--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -634,6 +634,16 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	note= {Doctoral Dissertation}
 }
 
+@inproceedings{Smith-2012-NewOrleans,
+	booktitle = {43rd AIAA Plasmadynamics and Lasers Conference 2012},
+	isbn = {9781624101878},
+	year = {2012},
+	title = {Aperture effects on aero-optical distortions caused by subsonic boundary layers},
+	copyright = {Copyright 2013 Elsevier B.V., All rights reserved.},
+	author = {Smith, A.E. and Gordeyev, S. and Jumper, E.},
+}
+
+
 @article{Smits-2011-AnnualReview,
 	author={Alexander J. Smits and Beverley J. McKeon and Ivan Marusic},
 	year={2011},
