added gordeyev 2012 paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -238,6 +238,19 @@
 	note={AIAA Paper 2011-1325},
 }
 
+@article{Gordeyev-2012-AIAAJournal,
+	issn = {0001-1452},
+	journal = {AIAA Journal},
+	pages = {682--690},
+	volume = {50},
+	number = {3},
+	year = {2012},
+	title = {Aero-Optical Effects of Supersonic Boundary Layers},
+	language = {eng},
+	author = {Gordeyev, Stanlislav and Jumper, Eric and Hayden, Tim E},
+}
+
+
 @article{Gordeyev-2014-ExpInFluids,
 	author={Stanislav Gordeyev and Nicholas De Lucca and Eric J. Jumper and Kyle Hird and Thomas J. Juliano and James W. Gregory and James Thordahl and Donald J. Wittich},
 	year={2014},
