Venema Branch point paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 28 Feb 2019
+% 1 Mar 2019
 %
 
 
@@ -752,6 +752,18 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	lccn = {2010029591},
 }
 
+@article{Venema-2008-OpticsExpress,
+	issn = {1094-4087},
+	abstract = {Strong turbulence causes phase discontinuities known as branch points in an optical field. These discontinuities complicate the phase unwrapping necessary to apply phase corrections onto a deformable mirror in an adaptive optics (AO) system. This paper proposes a non-optimal but effective and implementable phase unwrapping method for optical fields containing branch points. This method first applies a least-squares (LS) unwrapper to the field which isolates and unwraps the LS component of the field. Four modulo-2pi-equivalent non-LS components are created by subtracting the LS component from the original field and then restricting the result to differing ranges. 2pi phase jumps known as branch cuts are isolated to the non-LS components and the different non-LS realizations have different branch cut placements. The best placement of branch cuts is determined by finding the non-LS realization with the lowest normalized cut length and adding it to the LS component. The result is an unwrapped field which is modulo-2pi -equivalent to the original field while minimizing the effect of phase cuts on system performance. This variable-range 'phi LS +phi non phi LS' unwrapper, is found to outperform other unwrappers designed to work in the presence of branch points at a reasonable computational burden. The effect of improved unwrapping is demonstrated by comparing the performance of a system using a fixed-range phi 'LS + phi non--LS' realization unwrapper against the variable-range 'phi LS +phi non--LS' unwrapper in a closed-loop simulation. For the 0.5 log-amplitude variance turbulence tested, the system Strehl performance is improved by as much as 41.6 percent at points where fixed-range 'phi LS + phi non phi LS' unwrappers result in particularly poor branch cut placement. This significant improvement in previously poorly performing regions is particularly important for systems such as laser communications which require minimum Strehl ratios to operate successfully.},
+	journal = {Optics express},
+	volume = {16},
+	number = {10},
+	year = {2008},
+	title = {Optical phase unwrapping in the presence of branch points},
+	language = {eng},
+	author = {Venema, Todd M and Schmidt, Jason D},
+	keywords = {Optics and Photonics},
+}
 
 @article{Wang-2012-AnnualReview,
 	author={Meng Wang and Ali Mani and Stanislav Gordeyev},
