Added Wang paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -788,6 +788,19 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	keywords = {Optics and Photonics},
 }
 
+@article{Wang-2012-JFM,
+	issn = {0022-1120},
+	abstract = {Abstract Compressible large-eddy simulations are carried out to study the aero-optical distortions caused by Mach 0.5 flat-plate turbulent boundary layers at Reynolds numbers of ${\mathit{Re}}_{\theta } = 875$ , 1770 and 3550, based on momentum thickness. The fluctuations of refractive index are calculated from the density field, and wavefront distortions of an optical beam traversing the boundary layer are computed based on geometric optics. The effects of aperture size, small-scale turbulence, different flow regions and beam elevation angle are examined and the underlying flow physics is analysed. It is found that the level of optical distortion decreases with increasing Reynolds number within the Reynolds-number range considered. The contributions from the viscous sublayer and buffer layer are small, while the wake region plays a dominant role, followed by the logarithmic layer. By low-pass filtering the fluctuating density field, it is shown that small-scale turbulence is optically inactive. Consistent with previous experimental findings, the distortion magnitude is dependent on the propagation direction due to anisotropy of the boundary-layer vortical structures. Density correlations and length scales are analysed to understand the elevation-angle dependence and its relation to turbulence structures. The applicability of Suttonâs linking equation to boundary-layer flows is examined, and excellent agreement between linking equation predictions and directly integrated distortions is obtained when the density length scale is appropriately defined.},
+	journal = {Journal of Fluid Mechanics},
+	pages = {122--151},
+	volume = {696},
+	publisher = {Cambridge University Press},
+	year = {2012},
+	title = {Aero-optics of subsonic turbulent boundary layers},
+	author = {Wang, Kan and Wang, Meng},
+	keywords = {Boundary Layers; Compressible Flows; Turbulence Simulation},
+}
+
 @article{Wang-2012-AnnualReview,
 	author={Meng Wang and Ali Mani and Stanislav Gordeyev},
 	year={2012},
