--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -716,6 +716,18 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	keywords = {Papers; Boundary Layer Structure; Turbulent Flows},
 }
 
+@misc{Steinmetz-1980-NASA,
+	abstract = {The effect of the thin turbulent layers, including boundary layers and shear layers, on light propagation is examined from a theoretical point of view. In particular, a mathematical model is developed to describe the interaction between the aerodynamic or, more precisely, the density fluctuations and the electromagnetic field. It is assumed that the turbulence induces a normally distributed phase aberration which is a homogenous random function in the plane of the aperture. The optical degradation is described in terms of the optical transfer function and the Strehl ratio which are random. Expressions for the first and second moments of these two parameters are developed from the definitions. Asymptotic (large aperture) approximations to these expressions are derived and discussed. Finally, the exact approximate results are compared for several typical values of the ratios of aperture diameter to scale of density fluctuations and rms phase aberration to wave length respectively.},
+	pages = {253--285},
+	year = {1980},
+	title = {Second moments of optical degradation due to a thin turbulent layer},
+	language = {eng},
+	author = {Steinmetz, W},
+	keywords = {Aerodynamics ; Turbulence ; Computational Fluid Dynamics ; Mathematical Models ; Approximation ; Aberration ; Propagation ; Degradation ; Fluctuation ; Electromagnetic Fields ; Turbulent Flow ; Boundary Layer ; Aging Aircraft ; Density ; Electromagnetic Waves ; Waves ; Aircraft ; Fluid Flow ; Aircraft (Mt)},
+	url = {http://search.proquest.com/docview/23869729/},
+}
+
+
 @article{Sutton-1969-AIAA,
 	author={G. W. Sutton},
 	year={1969},
