added ATA website

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -37,6 +37,11 @@
 	month = "May",
 }
 
+@misc{ATA-2019-Web,
+	title = {Beam Control Subsystems: Advanced Line-of-Site Stabilization (LOSS) and Beam Control},
+	howpublished = {\url{http://www.atacorp.com/beam_control_subsystems.html}},
+	note = {Accessed: 2019-03-37}
+}
 
 @inproceedings{Burns-2015-Kissimme,
 	author={William R. Burns and Eric J. Jumper and Stanislav Gordeyev},
