added 2 adrian papers and a whiteley paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -12,6 +12,30 @@
   note = {Accessed: 2017-02-15}
 }
 
+@inproceedings{Adrian-1975-TurbInLiquids,
+	author = {{Adrian}, R.~J.},
+	title = "{On the role of conditional averages in turbulence theory}",
+	keywords = {Flow Theory, Flow Velocity, Functions (Mathematics), Turbulent Flow, Algorithms, Average, Closures, Integral Equations, Navier-Stokes Equation, Numerical Integration, Probability Density Functions, Turbulence Models, Velocity Distribution},
+	booktitle = {Turbulence in Liquids},
+	year = 1977,
+	editor = {{Zakin}, J.~L. and {Patterson}, G.~K.},
+	pages = {323-332},
+	adsurl = {http://adsabs.harvard.edu/abs/1977tuli.proc..323A},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Adrian-1979-PhysOfFluids,
+	issn = {10706631},
+	journal = {Physics of Fluids},
+	pages = {2065--2070},
+	volume = {22},
+	number = {11},
+	year = {1979},
+	title = {Conditional eddies in isotropic turbulence},
+	copyright = {Copyright 2018 Elsevier B.V., All rights reserved.},
+	author = {Adrian, R.J.},
+}
+
 @article{Adrian-2000-JFM,
 	author={R. J. Adrian and C. D. Meinhart and C. D. Tomkins},
 	year={2000},
@@ -829,6 +853,22 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
 	note={http://dx.doi.org/10.1146/annurev-fluid-120710-101152},
 	url={http://dx.doi.org/10.1146/annurev-fluid-120710-101152}
 }
+
+@article{Whiteley-2013-OptEng,
+	issn = {0091-3286},
+	abstract = {<p>Wavefront measurements from wind tunnel or flight testing of an optical system are affected by jitter sources due to the measurement platform, system vibrations, or aero-mechanical buffeting. Depending on the nature of the testing, the wavefront jitter will be a composite of several effects, one of which is the aero-optical jitter; i.e., the wavefront tilt due to random air density fluctuations. To isolate the aero-optical jitter component from recent testing, we have developed an estimation technique that uses only higher-order wavefront measurements to determine the jitter. By analogy with work done previously with free-stream turbulence, we have developed a minimum mean-square error estimator using higher-order wavefront modes to compute the current-frame tilt components through a linear operation. The estimator is determined from computational fluid dynamics evaluation of aero-optical disturbances, but does not depend on the strength of such disturbances. Applying this technique to turret flight test data, we found aero-optical jitter to be 7.7±0.8  μrad and to scale with (ρ/ρSL)M2 (∼1  μrad in the actual test cases examined). The half-power point of the aero-optical jitter variance was found to be ∼2u∞/Dt and to roll off in temporal frequency with a power law between f−11/3 and f−10/3.</p>},
+	journal = {Optical Engineering},
+	pages = {071411--071411},
+	volume = {52},
+	publisher = {Society of Photo-Optical Instrumentation Engineers},
+	number = {7},
+	year = {2013},
+	title = {Aero-optical jitter estimation using higher-order wavefronts},
+	language = {eng},
+	author = {Whiteley, Matthew R and Goorskey, David J and Drye, Richard},
+	keywords = {Aero-Optics ; Jitter ; Wavefront Error ; Tilt Sensing ; Estimation ; Scaling ; Engineering ; Visual Arts ; Physics},
+}
+
 
 @article{Zhou-1999-JFM,
 	author={J. Zhou and R. J. Adrian and S. Balachandar and T. M. Kendall},
