Added Ed Dissertation

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 1 Mar 2019
+% 2 Apr 2019
 %
 
 
@@ -586,6 +586,12 @@ publisher = {Addison-Wesley},
 	volume={22},
 	number={6},
 	url={http://scitation.aip.org/content/aip/journal/pof2/22/6/10.1063/1.3453711}
+}
+
+@misc{Mathews-2017-Dissertation,
+	author={Edwin Mathews},
+	year={2017},
+	title={Numerical and Theoretical Analysis of Aero-Optics with Application to an Optical Turret}
 }
 
 @article{Morrida-2017-ApplOpt,
