added two new papers

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 2 Apr 2019
+% 14 Apr 2019
 %
 
 
@@ -373,6 +373,22 @@
 	note={AIAA-2016-3804},
 }
 
+@inproceedings{Gordeyev-2017-AIAAJournal,
+	issn = {00011452},
+	journal = {AIAA Journal},
+	pages = {3629--3639},
+	volume = {55},
+	publisher = {American Institute of Aeronautics and Astronautics Inc.},
+	number = {11},
+	year = {2017},
+	title = {Optical measurements of transitional events in a Mach-6 boundary layer},
+	copyright = {Copyright 2017 Elsevier B.V., All rights reserved.},
+	author = {Gordeyev, S. and Juliano, T.J.},
+	keywords = {Turbulent Flow ; Topology ; Optical Measurement ; Boundary Layers ; Wave Packets ; Boundary Layer Transition ; Wave Fronts ; Turbulent Boundary Layer ; Laminar Boundary Layer ; Thickness ; Aerodynamics;},
+}
+
+
+
 @book{GriffithsElectrodynamics-1981-Book,
 	publisher = {Prentice-Hall},
 	isbn = {013481374X},
@@ -408,6 +424,20 @@ publisher = {Addison-Wesley},
 	lccn = {2001032540},
 }
 
+@inproceedings{Hedlund-2018-AIAAJournal,
+	issn = {00011452},
+	journal = {AIAA Journal},
+	pages = {2699--2711},
+	volume = {56},
+	publisher = {American Institute of Aeronautics and Astronautics Inc.},
+	number = {7},
+	year = {2018},
+	title = {Measurement of flow perturbation spectra in Mach 4.5 corner separation zone},
+	copyright = {Copyright 2018 Elsevier B.V., All rights reserved.},
+	author = {Hedlund, B. and Houpt, A. and Gordeyev, S. and Leonov, S.},
+	keywords = {Measurement Methods ; Frequency Spectrum ; Compression Zone ; Actuation ; Pressure Sensors ; Dispersed Gas Phase Hold Up ; Pcb Compounds ; Disturbances ; Plates (Structural Members) ; Flow ; Separation ; Sensors ; Pressure Sensors ; Aerodynamics ; Fluid Flow ; Turbulent Flow ; Enthalpy ; Measurement Techniques ; Enthalpy ; Computational Fluid Dynamics ; Reynolds Number ; Reynolds Number ; Polychlorinated Biphenyls;},
+}
+
 @book{Holmes-2012,
 	author={Philip Holmes},
 	year={2012},
@@ -418,6 +448,16 @@ publisher = {Addison-Wesley},
 	abstract={"Turbulence pervades our world, from weather patterns to the air entering our lungs. This book describes methods that reveal its structures and dynamics. Building on the existence of coherent structures - recurrent patterns - in turbulent flows, it describes mathematical methods that reduce the governing (Navier-Stokes) equations to simpler forms that can be understood more easily. This second edition contains a new chapter on the balanced proper orthogonal decomposition: a method derived from control theory that is especially useful for flows equipped with sensors and actuators. It also reviews relevant work carried out since 1995. The book is ideal for engineering, physical science and mathematics researchers working in fluid dynamics and other areas in which coherent patterns emerge"-- "This book describes methods that reveal its structures and dynamics. Building on the existence of coherent structures - recurrent patterns - in turbulent flows, it describes mathematical methods that reduce the governing (Navier-Stokes) equations to simpler forms that can be understood more easily. This second edition contains a new chapter on the balanced proper orthogonal decomposition: a method derived from control theory that is especially useful for flows equipped with sensors and actuators. It also reviews relevant work carried out since 1995"--},
 	isbn={9781107008250 1107008255},
 	language={English}
+}
+
+@inproceedings{Houpt-2016-DC
+	publisher = {American Institute of Aeronautics and Astronautics Inc, AIAA},
+	booktitle = {47th AIAA Plasmadynamics and Lasers Conference},
+	isbn = {9781624104343},
+	year = {2016},
+	title = {Transient plasma impact on spectra of flow disturbances in a corner separation zone at mach 4.5},
+	copyright = {Copyright 2017 Elsevier B.V., All rights reserved.},
+	author = {Houpt, A.W. and Hedlund, B.E. and Gordeyev, S.V. and Juliano, T.J. and Leonov, S.B.},
 }
 
 @article{Hutchins-2007-PhilTrans,
