--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -451,7 +451,7 @@ publisher = {Addison-Wesley},
 }
 
 @inproceedings{Houpt-2016-DC
-	publisher = {American Institute of Aeronautics and Astronautics Inc, AIAA},
+	publisher = {American Institute of Aeronautics and Astronautics Inc},
 	booktitle = {47th AIAA Plasmadynamics and Lasers Conference},
 	isbn = {9781624104343},
 	year = {2016},
