--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -450,8 +450,8 @@ publisher = {Addison-Wesley},
 	language={English}
 }
 
-@inproceedings{Houpt-2016-DC
-	publisher = {American Institute of Aeronautics and Astronautics Inc},
+@inproceedings{Houpt-2016-DC,
+	publisher = {American Institute of Aeronautics and Astronautics Inc, AIAA},
 	booktitle = {47th AIAA Plasmadynamics and Lasers Conference},
 	isbn = {9781624104343},
 	year = {2016},
