added two new shear layer sources

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 17 Jun 2019
+% 25 Jun 2019
 %
 
 
@@ -205,6 +205,12 @@
 	language = {eng},
 	author = {FITZGERALD, E. J. and JUMPER, E. J.},
 	keywords = {Engineering ; Applied Sciences ; Physics;},
+}
+
+@misc{Freeman-2014-Dissertation,
+title = {On the Growth Rate of Turbulent Mixing Layers: A New Parametric Model},
+author = {Freeman, Jeffrey L},
+year={2014},
 }
 
 @article{Fried-1992-AppliedOptics,
@@ -694,6 +700,20 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
   year={2018},
   note = {Accessed: 2018-01-04}
 }
+
+@article{Papamoschou-1988-JFM
+year = {1988},
+title = {The compressible turbulent shear layer: an experimental study},
+language = {eng},
+author = {Papamoschou, Dimitri and Roshko, Anatol},
+keywords = {Engineering ; Applied Sciences ; Physics;},
+issn = {0022-1120},
+abstract = {The growth rate and turbulent structure of the compressible, plane shear layer are investigated experimentally in a novel facility. In this facility, it is possible to flow similar or dissimilar gases of different densities and to select different Mach numbers for each stream. Ten combinations of gases and Mach numbers are studied in which the free-stream Mach numbers range from 0.2 to 4. Schlieren photography of 20-ns exposure time reveals very low spreading rates and large-scale structures. The growth of the turbulent region is defined by means of Pitot-pressure profiles measured at several streamwise locations. A compressibility-effect parameter is defined that correlates and unifies the experimental results. It is the Mach number in a coordinate system convecting with the velocity of the dominant waves and structures of the shear layer, called here the convective Mach number. It happens to have nearly the same value for each stream. In the current experiments, it ranges from 0 to 1.9. The correlations of the growth rate with convective Mach number fall approximately onto one curve when the growth rate is normalized by its incompressible value at the same velocity and density ratios. The normalized growth rate, which is unity for incompressible flow, decreases rapidly with increasing convective Mach number, reaching an asymptotic vaue of about 0.2 for supersonic convective Mach numbers.},
+journal = {Journal of Fluid Mechanics},
+pages = {453--477},
+volume = {197},
+}
+
 
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
