--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -701,7 +701,7 @@ keywords = {Shear (Mechanics) -- Research ; Vorticity -- Research;},
   note = {Accessed: 2018-01-04}
 }
 
-@article{Papamoschou-1988-JFM
+@article{Papamoschou-1988-JFM, 
 year = {1988},
 title = {The compressible turbulent shear layer: an experimental study},
 language = {eng},
