--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -444,6 +444,17 @@ publisher = {Addison-Wesley},
 	keywords = {Measurement Methods ; Frequency Spectrum ; Compression Zone ; Actuation ; Pressure Sensors ; Dispersed Gas Phase Hold Up ; Pcb Compounds ; Disturbances ; Plates (Structural Members) ; Flow ; Separation ; Sensors ; Pressure Sensors ; Aerodynamics ; Fluid Flow ; Turbulent Flow ; Enthalpy ; Measurement Techniques ; Enthalpy ; Computational Fluid Dynamics ; Reynolds Number ; Reynolds Number ; Polychlorinated Biphenyls;},
 }
 
+@article{Ho-1984-AnnRevFluid,
+	year = {1984},
+	title = {Perturbed Free Shear Layers},
+	copyright = {Copyright 2017 Elsevier B.V., All rights reserved.},
+	author = {Ho, Chih-Ming and Huerre, Patrick},
+	issn = {00664189},
+	journal = {Annual Review of Fluid Mechanics},
+	pages = {365--424},
+	volume = {16},
+}
+
 @book{Holmes-2012,
 	author={Philip Holmes},
 	year={2012},
