--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 25 Jun 2019
+% 1 Jul 2019
 %
 
 
@@ -65,6 +65,20 @@
 	title = {Beam Control Subsystems: Advanced Line-of-Site Stabilization (LOSS) and Beam Control},
 	howpublished = {\url{http://www.atacorp.com/beam_control_subsystems.html}},
 	note = {Accessed: 2019-03-37}
+}
+
+@article{Brown-Roshko-1974-JFM,
+number = {4},
+year = {1974},
+title = {On density effects and large structure in turbulent mixing layers},
+language = {eng},
+author = {Brown, Garry L. and Roshko, Anatol},
+keywords = {Engineering ; Applied Sciences ; Physics;},
+issn = {0022-1120},
+abstract = {Plane turbulent mixing between two streams of different gases (especially nitrogen and helium) was studied in a novel apparatus. Spark shadow pictures showed that, for all ratios of densities in the two streams, the mixing layer is dominated by large coherent structures. High-speed movies showed that these convect at nearly constant speed, and increase their size and spacing discontinuously by amalgamation with neighbouring ones. The pictures and measurements of density fluctuations suggest that turbulent mixing and entrainment is a process of entanglement on the scale of the large structures; some statistical properties of the latter are used to obtain an estimate of entrainment rates. Large changes of the density ratio across the mixing layer were found to have a relatively small effect on the spreading angle; it is concluded that the strong effects, which are observed when one stream is supersonic, are due to compressibility effects, not density effects, as has been generally supposed.},
+journal = {Journal of Fluid Mechanics},
+pages = {775--816},
+volume = {64},
 }
 
 @inproceedings{Burns-2015-Kissimme,
