added another gordeyev paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 1 Jul 2019
+% 4 Jul 2019
 %
 
 
@@ -321,6 +321,18 @@ year={2014},
 	language = {eng},
 	author = {Gordeyev, Stanlislav and Jumper, Eric and Hayden, Tim E},
 }
+
+@inproceedings{Gordeyev-2013-GrapevineDallas,
+	author = { Stanislav Gordeyev and  Robert Burns and  Eric Jumper and  Sivaram Gogineni and  Michael Paul and  Donald Wittich},
+	title = {Aero-Optical Mitigation of Shocks Around Turrets at Transonic Speeds Using Passive Flow Control},
+	booktitle = {51st AIAA Aerospace Sciences Meeting including the New Horizons Forum and Aerospace Exposition},
+	chapter = {},
+	pages = {},
+	doi = {10.2514/6.2013-717},
+	URL = {https://arc.aiaa.org/doi/abs/10.2514/6.2013-717},
+	eprint = {https://arc.aiaa.org/doi/pdf/10.2514/6.2013-717}
+}
+
 
 
 @article{Gordeyev-2014-ExpInFluids,
