--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -996,6 +996,20 @@ volume = {197},
 	keywords = {Aero-Optics ; Jitter ; Wavefront Error ; Tilt Sensing ; Estimation ; Scaling ; Engineering ; Visual Arts ; Physics},
 }
 
+@article{Whiteley-Gordeyev-2013-OptEng,
+	publisher = {Society of Photo-Optical Instrumentation Engineers},
+	number = {7},
+	year = {2013},
+	title = {Conformal phased array aero-optical modeling and compensation},
+	language = {eng},
+	author = {Whiteley, Matthew R and Gordeyev, Stanislav},
+	keywords = {Aero-Optics ; Phased Array ; Boundary Layer ; Wavefront Error ; Adaptive Optics ; Engineering ; Visual Arts ; Physics},
+	issn = {0091-3286},
+	journal = {Optical Engineering},
+	pages = {071409--071409},
+	volume = {52},
+}
+
 
 @article{Zhou-1999-JFM,
 	author={J. Zhou and R. J. Adrian and S. Balachandar and T. M. Kendall},
