--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 4 Jul 2019
+% 12 Jul 2019
 %
 
 
@@ -161,6 +161,19 @@ volume = {64},
 	title = {Experimental measurement of large-scale three-dimensional structures in a turbulent boundary layer. Part 2. Long structures},
 	author = {DENNIS, DAVID J. C and NICKELS, TIMOTHY B},
 	keywords = {Boundary Layers; Boundary Layer Structure; Turbulent Boundary Layers},
+}
+
+@article{Dimotakis-1986-AIAAJournal,
+number = {11},
+year = {1986},
+title = {Two-dimensional shear-layer entrainment},
+language = {eng},
+author = {Dimotakis, Paul E},
+keywords = {Engineering;},
+issn = {0001-1452},
+journal = {AIAA Journal},
+pages = {1791--1796},
+volume = {24},
 }
 
 @misc{Duffin-2009-Thesis,
