added my own dissertation

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 12 Jul 2019
+% 04 Oct 2019
 %
 
 
@@ -632,6 +632,13 @@ publisher = {Addison-Wesley},
 	location={Grapevine, Texas},
 	note={AIAA Paper 2017-1344},
 }
+
+@misc{Kemnetz-2019-Dissertation,
+	author={Matthew R. Kemnetz},
+	year={2019},
+	title={Analysis of the Aero-Optical Component of the Jitter using the Stitching Method}
+}
+
 @book{Klein-1986-Book,
 	publisher = {Wiley},
 	isbn = {0471872970},
