added porter paper

--- a/bibtex-repo.bib
+++ b/bibtex-repo.bib
@@ -1,6 +1,6 @@
 %
 % Matthew Kemnetz
-% 04 Oct 2019
+% 06 Jan 2020
 %
 
 
@@ -771,6 +771,18 @@ pages = {453--477},
 volume = {197},
 }
 
+@article{Porter-2013-OptEng,
+author = {Christopher Porter and Stanislav V. Gordeyev and Eric J. Jumper},
+title = {Large-aperture approximation for not-so-large apertures},
+volume = {52},
+journal = {Optical Engineering},
+number = {7},
+publisher = {SPIE},
+pages = {1 -- 10},
+year = {2013},
+doi = {10.1117/1.OE.52.7.071417},
+URL = {https://doi.org/10.1117/1.OE.52.7.071417}
+}
 
 @misc{Ranade-2016-Thesis,
   author={Ranade,Piyush M.},
